fixed spaceing issues in showcase seciton where musk was not covering the video  properly

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -191,7 +191,7 @@ body {
             }
 
             .mask {
-                @apply absolute h-full top-0 lg:-top-20 xl:top-0;
+                @apply absolute h-full top-0 lg:top-0 xl:top-0;
 
                 img {
                     @apply h-full scale-150 lg:scale-100;
@@ -207,7 +207,7 @@ body {
         }
 
         .content {
-            @apply relative z-10 my-5 lg:-mt-40 bg-black font-semibold text-xl text-dark-100 lg:opacity-0;
+            @apply relative z-10 my-5 lg:-mt-10 bg-black font-semibold text-xl text-dark-100 lg:opacity-0;
 
             .wrapper {
                 @apply container mx-auto px-5 pb-20 2xl:px-0 flex flex-col lg:flex-row justify-center gap-20;
